# fieldrecord

./: .gitignore  FieldRecord.py  README.md  pyproject.toml
data/inputs/174723/: 174723.dbf  174723.shp  area.shp  mpoint.dbf  mpoint.shx
data/inputs/223411/: 223411.dbf  223411.txt  GippsTracklogs23_223411.dbf  GippsTracklogs23_223411.shp  HVP_Plantation_23.sbn  HVP_Plantation_23.sbx  HVP_Plantation_23.shx  area.dbf  area.sbx  area.shp.xml  mpoint.sbx  mpoint.shp  mpoint.shx
data/outputs/outputs_230628-1053/: point_obs.gpkg  polygon_obs.gpkg
data/outputs/outputs_230628-1102/: point_obs.gpkg  polygon_obs.gpkg
fieldrecord/: FieldRecord.py  __main__.py  mappings.py
fieldrecord/data/inputs/174723/: 174723.shx  174723.txt  area.dbf  area.shx  mpoint.shp
fieldrecord/data/inputs/223411/: GippsTracklogs23_223411.sbn  GippsTracklogs23_223411.sbx  GippsTracklogs23_223411.shp.xml  GippsTracklogs23_223411.shx  HVP_Plantation_23.shp.xml  area.sbn  area.shp  area.shx  mpoint.dbf  mpoint.sbn  mpoint.shp.xml
fieldrecord/src/: decode.py  formatting.py  process_points.py  process_polygons.py  utils.py
src/: process_points.py
