[tool.poetry]
name = "fieldrecord"
version = "0.1.0"
description = ""
authors = ["cb-arborcarbon <c.barritt@arborcarbon.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.0"
pandas = "^2.0.2"
shapely = "^2.0.1"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
